# test-for-funtech

./: docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/versions/: 2025_12_18_1516-2c3a74b3359f_first.py  2025_12_18_2020-34e95f5fec0d_add_order_table.py  2025_12_18_2038-0faafedce855_add_order_table.py  2025_12_18_2109-88dba903b68a_add_some_in_order_table.py
app/api/: __init__.py
app/api/auth/: __init__.py  dependencies.py  router.py
app/api/order/: __init__.py  router.py
app/core/: config.py
app/core/helpers/: db_helper.py
app/core/models/: __init__.py  base.py  order.py  user.py
app/core/models/mixins/: __init__.py  id_int_pk.py  id_uuid_pk.py
app/core/schemas/: order.py  user.py
app/internal_types/: order_types.py
app/repository/: auth.py  order.py
app/service/auth/: __init__.py  service.py
app/service/jwt/: __init__.py  token.py
app/service/order/: __init__.py  service.py
app/utils/: case_converter.py
